[gd_scene load_steps=7 format=3 uid="uid://pe6tqla32quk"]

[ext_resource type="Texture2D" uid="uid://c770xs8dvmvpc" path="res://assets/ui/placeholders/stat_change_underlay.png" id="1_3m71c"]
[ext_resource type="Script" path="res://systems/ui/menus/menu_elements/stat_change_display.gd" id="1_oxt10"]
[ext_resource type="Texture2D" uid="uid://c0ow1gj3wun8a" path="res://assets/ui/icons/hp_icon_small.png" id="1_yx1qt"]
[ext_resource type="Texture2D" uid="uid://d01gfffwrqcoh" path="res://assets/ui/icons/atk_icon_small.png" id="2_7h3j6"]
[ext_resource type="Texture2D" uid="uid://deh2xxxn76dff" path="res://assets/sprites/keywords/kw_health.png" id="5_1q3qo"]
[ext_resource type="Theme" uid="uid://c2as6vbqpnrve" path="res://assets/ui/themes/tutorial_and_tooltips_theme.tres" id="5_m1hi5"]

[node name="StatChange" type="Control"]
custom_minimum_size = Vector2(280, 62)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_oxt10")

[node name="StatChangeUnderlay" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_3m71c")

[node name="StatChangeElements" type="Control" parent="."]
anchors_preset = 0
offset_right = 280.0
offset_bottom = 62.0

[node name="Attack" type="Control" parent="StatChangeElements"]
anchors_preset = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 54.0
offset_bottom = 54.0

[node name="AttackIcon" type="TextureRect" parent="StatChangeElements/Attack"]
layout_mode = 2
offset_right = 46.0
offset_bottom = 46.0
texture = ExtResource("2_7h3j6")
expand_mode = 3

[node name="AttackChangeLabel" type="Label" parent="StatChangeElements/Attack"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 46.0
offset_bottom = 46.0
theme = ExtResource("5_m1hi5")
text = "+0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 58.0
offset_top = 8.0
offset_right = 104.0
offset_bottom = 54.0

[node name="HealthIcon" type="TextureRect" parent="Health"]
layout_mode = 2
offset_right = 46.0
offset_bottom = 46.0
texture = ExtResource("1_yx1qt")
expand_mode = 1

[node name="HealthChangeLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 46.0
offset_bottom = 46.0
theme = ExtResource("5_m1hi5")
text = "+0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChangeSource" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 120.0
offset_top = 16.0
offset_right = 166.0
offset_bottom = 62.0

[node name="KeywordLabel" type="Label" parent="ChangeSource"]
unique_name_in_owner = true
layout_mode = 2
offset_left = -5.0
offset_top = -14.0
offset_right = 152.0
offset_bottom = 32.0
theme = ExtResource("5_m1hi5")
theme_override_font_sizes/font_size = 18
text = "%s"
vertical_alignment = 1

[node name="OwnerLabel" type="Label" parent="ChangeSource/KeywordLabel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 31.0
offset_right = 156.0
offset_bottom = 54.0
theme = ExtResource("5_m1hi5")
theme_override_font_sizes/font_size = 16
text = "- %s -"
vertical_alignment = 1

[node name="KeywordIcon" type="TextureRect" parent="ChangeSource"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 130.0
offset_top = 20.0
offset_right = 196.0
offset_bottom = 86.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("5_1q3qo")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
